@@ -1,5 +1,7 @@
 === master
 
+* Do not modify encoding of SQL::Blob instances in force_encoding plugin (jeremyevans)
+
 * Add Model.freeze_descendents to subclasses plugin, for easier finalizing associations/freezing of descendent classes (jeremyevans)
 
 * Add Model.finalize_associations method for finalizing associations, speeding up some association reflections methods almost 10x (jeremyevans)
